Josephus Problem updated